--- a/src/component/Footer.scss
+++ b/src/component/Footer.scss
@@ -3,4 +3,7 @@
     min-height: 60px;
     background-color: rgb(240, 240, 240);
     border: 1px solid #EAEAEA;
+    text-align: center;
+    line-height: 60px;
+    color: rgb(82, 82, 82);
 }
