--- a/src/component/Home.scss
+++ b/src/component/Home.scss
@@ -15,7 +15,7 @@
         cursor: pointer;
         span{
             padding: 8px 16px;
-            transition: 0.25s;
+            transition: 0.25s linear;
             &:hover{
                 font-weight: bold;
             }
@@ -27,5 +27,6 @@
         justify-content: space-between;
         flex-wrap: wrap;
         gap: 10px;
+        padding:10px 0 ;
     }
 }
