--- a/src/component/Card.scss
+++ b/src/component/Card.scss
@@ -7,7 +7,7 @@
     background-color: white;
     border: 1px solid #EAEAEA;
     border-radius: 16px;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    box-shadow: 0 6px 6px hsl(0deg 0% 0% / 0.3);
     animation: fadeIn 1s;
 
     @keyframes fadeIn {
