--- a/src/component/Home.scss
+++ b/src/component/Home.scss
@@ -23,10 +23,10 @@
     }
 
     .products{
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        gap: 10px;
-        padding:10px 0 ;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        justify-items: center;
+        align-items: center;
+        gap: 10px 10px;
     }
 }
