--- a/src/component/Nav.scss
+++ b/src/component/Nav.scss
@@ -1,5 +1,5 @@
 .nav{
-    width: 100wh;
+    width: 100vw;
     height: 60px;
     background-color: rgb(240, 240, 240);
     border: 1px solid #EAEAEA;
