--- a/src/component/Nav.scss
+++ b/src/component/Nav.scss
@@ -26,12 +26,11 @@
 
         span{
             padding: 10px;
-            color: #333;
+            color: rgb(100, 100, 100);
             cursor: pointer;
             transition: 0.25s;
-            &:hover{
-                font-weight: bold;
-            }
+            font-weight: bold;
+
             a{
                 text-decoration: none;
                 color: inherit;
