--- a/src/component/Home.scss
+++ b/src/component/Home.scss
@@ -22,11 +22,23 @@
     }
 
     .products{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        justify-items: center;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
         align-items: center;
         gap: 10px 10px;
         padding: 10px 0;
+    }
+}
+@media screen and (max-width: 1024px) {
+    .container{
+        width: 100%;
+
+        .filter{
+            flex-direction: column;
+            row-gap: 20px;
+        }
+        
     }
 }
