--- a/src/component/Nav.scss
+++ b/src/component/Nav.scss
@@ -70,3 +70,20 @@
         
     }
 }
+@media screen and (max-width: 768px) {
+    .nav{
+
+        &-mid{
+            display: none;
+        }
+    }
+}
+@media screen and (max-width: 1024px) {
+    .nav{
+
+        &-container{
+            width: 100%;
+            padding: 0 20px;
+        }
+    }
+}
