--- a/src/component/Product.scss
+++ b/src/component/Product.scss
@@ -5,6 +5,7 @@
     color: #333;
 
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: flex-start;
     .left{
@@ -36,5 +37,24 @@
             margin: 20px 0;
             
         }
+    }
+}
+@media screen and (max-width: 768px) {
+    .container-product{
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        .left{
+            display: flex;
+            justify-content: center;
+            img{
+                width: 60%;
+            }
+        }
+    }
+}
+@media screen and (max-width: 1024px) {
+    .container-product{
+        width: 100%;
     }
 }
